--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "name": "reposit1",
   "dependencies": {
-    "mysql2": "^3.14.0"
+    "mysql2": "^3.14.0",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "bcrypt": "^5.1.1",
+    "node-telegram-bot-api": "^0.66.0"
   }
 }
